	* Vignette: summary(lme_mod)$coef$fixed -> summary(lme_mod)$coefficients$fixed to avoid
	  partial matching of 'coef' to 'coefficients' by "$" operator.
	* r.squared: adjusted R squared fixed (at least for models with intercept).
	* model.matrix.pFormula and pmodel.response: ensured that 'data' gets reduced to the corresponding
	  model frame if not already a model frame (now mimics stats::model.matrix in this regard);
	  fixes corner cases with specific NA patterns when model.matrix.pFormula or pmodel.response are
	  called directly and 'data' not being a model frame (despite being required so)
	  [see tests/test_model.matrix_pmodel.response_NA.R].
	* detect_lin_dep: new function as a little helper function to detect linear dependent
	  columns, esp. in a model matrices; incl. doc with two examples about how linear
	  dependent columns can be induced by the within transformation.
	* doc pFormula.Rd extended (especially examples) and split up in two files to better accommodate
	  different return values and input values in the documentation
	  (new file added: man/model.frame_model.matrix.Rd).
	  
Changes since version 1.5-16
  
	* plmtest:  * fixed p-values [for type="kw" and "ghm"],
              * unbalanced version of all test statistics implemented,
              * doc update with literature references to unbalanced tests,
              * if requested, the "kw" statistic is now also calculated as one-way ("individual" or "time"), 
                albeit they coincide with respective "bp" statistics.
	* pwtest: formula interface respects 'effect' argument, 'effect' argument now mentioned in doc.
	* data set 'Wages': factor 'sex' releveled to c("male", "female") to match use in original paper.
	* print.summary.plm: supress printing of 'effects' argument in top line in case of 'pooling' model.
	* doc for between, Between, Within extended; doc for lag, lead, diff in separate file now (lag_lead_diff.Rd)